src/test/resources/semantic/custom/reject/assignmentToWrongTypeVoid.ul
void main() {
}

void foo() {
    int foo;
    foo = main();
}
